--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script src="rock_paper_scissors.js"></script>
+    <script src="javascript.js"></script>
 </head>
 <body>
     
