--- a/test.html
+++ b/test.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script src="javascript.js"></script>
+    <script src="test.js"></script>
 </head>
 <body>
-    
+
 </body>
 </html>
