--- a/testdom.html
+++ b/testdom.html
@@ -11,6 +11,7 @@
     <button id="scissors">Scissors</button>
 
     <div id="roundResult"></div>
+    <div id="score"></div>
     <div id="finalScore"></div>
 </body>
 </html>
