--- a/testdom.html
+++ b/testdom.html
@@ -6,6 +6,7 @@
     <script src="testdom.js" defer></script>
 </head>
 <body>
+    <h1>Rock Paper Scissors</h1>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
